Day 2/Track 3/Operational-GeoAI-Model-Serving/Part2/4_serving_vllm_on_k8s_with_kserve/kubernetes/prithvi-sen1floods11-predictor-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prithvi-sen1floods11-predictor-roundrobin
  namespace: prithvi-kserve
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: "true"
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: prithvi-sen1floods11-predictor
    weight: 100
  wildcardPolicy: None
